# phoneme

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  ROADMAP.md  commit_msg.txt  config.example.toml  filter.sh  gitlog.txt  release_notes.md  release_notes.txt  replace_session.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
archive_internal/: README.md
crates/phoneme-agent-core/: Cargo.toml  README.md
crates/phoneme-agent-core/src/: lib.rs
crates/phoneme-audio/: Cargo.toml  README.md
crates/phoneme-audio/src/: convert.rs  decode.rs  device.rs  format.rs  lib.rs  meeting_align.rs  normalize.rs  preroll.rs  recorder.rs  silence.rs  source.rs  wav.rs
crates/phoneme-audio/tests/: recorder.rs  silence.rs  wav.rs
crates/phoneme-core/: Cargo.toml  README.md
crates/phoneme-core/migrations/: 20260519000000_initial.sql  20260601000000_tags.sql  20260602000000_original_transcript.sql  20260603000000_notes.sql  20260604000000_meeting_session.sql  20260606000000_embeddings.sql  20260607000000_in_place.sql  20260607000000_processing_columns.sql  20260608000000_session_name.sql  20260609000000_rename_session_to_meeting.sql  20260610000000_initial.sql  20260610000001_add_summary.sql  20260610000002_add_clean_transcript.sql  20260610000003_add_user_edited.sql  20260610000004_add_embedding_chunks.sql  20260610000005_add_speaker_names.sql  20260610000006_add_favorite.sql  20260610000007_add_tag_suggestions.sql  20260612000000_add_transcript_segments.sql  20260612000001_add_title.sql  20260613000001_add_transcript_words.sql  20260613000002_add_step_models.sql  20260614000000_add_word_leading_space.sql  20260614000001_add_ai_activity.sql  20260617000000_fts_trigger_on_transcript.sql  20260619000000_add_saved_searches.sql  20260619000001_add_voiceprints.sql  20260619000002_add_speaker_suggestion_dismissals.sql  20260619000003_voiceprints_cascade.sql  20260620000000_voiceprint_duration.sql  20260620000001_named_voice_soft_delete.sql  20260620000002_transcript_versions.sql  20260620000003_timing_variant.sql  20260620000004_forgotten_links_fk.sql  20260621000000_add_mean_confidence.sql  20260621000001_add_ann_keys.sql  20260621000002_add_pinned.sql  20260621000003_add_meeting_digest.sql  20260621000004_add_entities.sql  20260622000000_add_chapters.sql  (+8 more)
crates/phoneme-core/src/: backup.rs  catalog.rs  chunk.rs  config.rs  der.rs  diagnostics.rs  diarization.rs  dictation.rs  doctor.rs  embed.rs  endpoints.rs  error.rs  export.rs  filler.rs  foreground.rs  fusion.rs  hook.rs  id.rs  job.rs  lib.rs  llm.rs  models.rs  native_whisper.rs  profiles.rs  queue.rs  realign.rs  realign_test.rs  secret_crypto.rs  secrets.rs  tags.rs  title.rs  transcription.rs  types.rs  voiceprint.rs  voiceprint_eval.rs  webhook.rs  wer.rs
crates/phoneme-core/src/catalog/: ann.rs  chapters.rs  embeddings.rs  entities.rs  meeting_digests.rs  mod.rs  period_digests.rs  recordings.rs  saved_search.rs  segments.rs  speakers.rs  tags.rs  tasks.rs  tests.rs
crates/phoneme-core/tests/: catalog.rs  der_harness.rs  hook.rs  llm.rs  queue.rs  transcription.rs
crates/phoneme-ipc/: Cargo.toml  README.md
crates/phoneme-ipc/src/: codec.rs  error.rs  lib.rs  named_pipe.rs  schema.rs  transport.rs
crates/phoneme-ipc/tests/: codec.rs  round_trip.rs  schema.rs
docs/: HANDOFF.md  IDEAS.md  README.md  ROADMAP.md  architecture.md  cli_reference.md  hooks.md  llm_post_processing.md  smoke-test.md  troubleshooting.md
docs/audits/: 2026-06-code-audit.md  2026-06-docs-audit.md
docs/design/: live-preview-overlay.md  merged-meeting-view.md  phoneme-agent-harness.md
docs/dev/: integration-api.md
docs/developer-guide/: architecture.md  backend_guide.md  building_from_source.md  cli_reference.md  config_reference.md  data_directories.md  feature_parity.md  frontend_guide.md  how_to_extend.md  internals.md  ipc_integration.md  mcp_server.md  onboarding.md  plugins_and_hooks.md  rest_api.md  technical_challenges.md  testing_and_ci.md  threat_model.md
docs/features/: transcribe_in_place.md
docs/reviews/: 2026-05-21-code-review.md
docs/user-guide/: auto_tagging.md  config_profiles.md  diarization_and_whisper.md  entities.md  exporting_and_backup.md  faq.md  getting_started.md  hotkeys_and_recording_modes.md  importing_audio.md  keyboard_navigation.md  meeting_mode.md  providers_and_models.md  search_and_organization.md  semantic_search.md  settings_overview.md  smart_cleanup.md  storage_paths_and_retention.md  streaming_preview_and_preroll.md  tasks_and_reminders.md  topic_timelines.md  transcribe_in_place.md  troubleshooting.md
frontend/: README.md  eslint.config.js  index.html  indicator.html  overlay.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/: App.ts  indicator.ts  main.ts  overlay.ts  overlayTail.test.ts  overlayTail.ts  router.test.ts  router.ts
frontend/src/components/: ConfirmDelete.test.ts  ConfirmDelete.ts  DoctorModal.test.ts  DoctorModal.ts  FindReplace.ts  HeaderBar.test.ts  HeaderBar.ts  HealthPill.ts  ModelPicker.test.ts  ModelPicker.ts  OllamaModelManager.ts  (+10 more)
hooks/: notify-desktop.ps1  summarize-with-ollama.ps1  to-clipboard.ps1  to-denote.ps1  to-file.ps1  to-markdown-daily.ps1  to-org-journal.ps1  to-stdout.ps1  to-timestamped-note.ps1  to-todoist.ps1  to-webhook.ps1  type-to-active-window.ps1
installer/: wix-fragment.wxs
scratch/: check_ci.py  get_log.py  get_log_27071727850.py  wait_ci.py
scripts/: gen-tray-icons.mjs  generate-icons.ps1  install-git-hooks.ps1
scripts/git-hooks/: commit-msg
src-tauri/: Cargo.toml  README.md  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: auto_spawn.rs  bridge.rs  checksums.rs  commands.rs  config_cache.rs  config_io.rs  doctor.rs  events.rs  indicator.rs  lib.rs  main.rs  overlay.rs  similar.rs  tray.rs  wizard.rs
src-tauri/src/commands/: config.rs  files.rs  mod.rs  recordings.rs  system.rs  wizard.rs
(+174 files in other folders)
