[workspace]
resolver = "2"
members = [
    "crates/phoneme-core",
    "crates/phoneme-audio",
    "crates/phoneme-ipc",
    "crates/phoneme-agent-core",
    "bin/phoneme-daemon",
    "bin/phoneme",
    "bin/phoneme-mcp",
    "bin/phoneme-rest",
    "src-tauri",
]

[workspace.package]
version = "1.8.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/namefailed/phoneme"

[workspace.dependencies]
anyhow = "1"
async-trait = "0.1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
secrecy = { version = "0.8", features = ["serde"] }
toml = "0.8"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio-rustls", "sqlite", "macros", "migrate", "chrono"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "multipart", "rustls-tls", "stream"] }
directories = "5"
shellexpand = "3"
shlex = "1"
chrono = { version = "0.4", features = ["serde"] }
proptest = "1"
wiremock = "0.6"
tempfile = "3"
cpal = "0.15"
hound = "3.5"
rubato = "0.15"
tokio-util = { version = "0.7", features = ["codec"] }
bytes = "1"
notify = "6"
clap = { version = "4", features = ["derive"] }
tracing-appender = "0.2"
comfy-table = "7"
colored = "2"
insta = "1"
zip = { version = "2.2", default-features = false, features = ["deflate"] }
tauri = { version = "2", features = [] }
tauri-build = "2"
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-window-state = "2"
enigo = "0.2"
arboard = "3.4"
regex = "1"
which = "6"
futures = "0.3"
sha2 = "0.10"
tauri-plugin-notification = "2"
tauri-plugin-updater = "2"
