[package]
name = "phoneme-tray"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "phoneme_tray_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "phoneme-tray"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
phoneme-core = { path = "../crates/phoneme-core" }
phoneme-ipc = { path = "../crates/phoneme-ipc" }
phoneme-audio = { path = "../crates/phoneme-audio" }
tauri = { workspace = true, features = ["tray-icon", "image-png"] }
tauri-plugin-shell.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-fs.workspace = true
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
toml.workspace = true
reqwest.workspace = true
which = "6"
futures = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
