[package]
name = "phoneme-tray"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "phoneme_tray_lib"
crate-type = ["rlib"]

[[bin]]
name = "phoneme-tray"
path = "src/main.rs"

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
phoneme-core = { path = "../crates/phoneme-core" }
phoneme-ipc = { path = "../crates/phoneme-ipc" }
phoneme-audio = { path = "../crates/phoneme-audio" }
directories.workspace = true
tauri = { workspace = true, features = ["tray-icon", "image-png", "protocol-asset"] }
tauri-plugin-shell.workspace = true
tauri-plugin-dialog.workspace = true
tauri-plugin-fs.workspace = true
tauri-plugin-global-shortcut.workspace = true
tauri-plugin-window-state.workspace = true
tauri-plugin-updater = "2"
sysinfo = "0.30"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tracing.workspace = true
toml.workspace = true
reqwest.workspace = true
which = "6"
futures = "0.3"
zip = "0.6"
tauri-plugin-notification = "2.3.3"
speakrs = "0.4.2"

[dev-dependencies]
wiremock.workspace = true
tempfile.workspace = true

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
