[package]
name = "phoneme-audio"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
phoneme-core = { path = "../phoneme-core" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
cpal.workspace = true
hound.workspace = true
rubato.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
