[package]
name = "phoneme-audio"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
phoneme-core = { path = "../phoneme-core" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
cpal.workspace = true
hound.workspace = true
rubato.workspace = true
async-trait = "0.1"
# Pure-Rust demux/decode for imported audio files. Enable only the codecs and
# container formats Phoneme accepts on import: WAV/PCM, MP3, and MP4/M4A
# (which carries AAC or ALAC).
symphonia = { version = "0.5", default-features = false, features = [
    "wav",
    "pcm",
    "mp3",
    "isomp4",
    "aac",
    "alac",
] }

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
