[package]
name = "phoneme-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
toml.workspace = true
sqlx.workspace = true
reqwest.workspace = true
directories.workspace = true
shellexpand.workspace = true
shlex.workspace = true
chrono.workspace = true
ort = "2.0.0-rc.12"
tokenizers = { version = "0.23.1", default-features = false, features = ["fancy-regex"] }
ndarray = "0.17.2"
secrecy.workspace = true
speakrs = "0.4.2"
hound.workspace = true
whisper-rs = { version = "0.11", optional = true }
regex.workspace = true
which = "6"

# DPAPI (CryptProtectData/CryptUnprotectData) for at-rest API-key encryption,
# plus GetDiskFreeSpaceExW for the Doctor's disk-space checks.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
] }

[features]
native-whisper = ["dep:whisper-rs"]

[dev-dependencies]
proptest.workspace = true
reqwest.workspace = true
wiremock.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
