[package]
name = "phoneme-core"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
toml.workspace = true
sqlx.workspace = true
reqwest.workspace = true
directories.workspace = true
shellexpand.workspace = true
shlex.workspace = true
chrono.workspace = true
ort = "2.0.0-rc.12"
tokenizers = { version = "0.23.1", default-features = false, features = ["fancy-regex"] }
ndarray = "0.17.2"
secrecy.workspace = true
speakrs = "0.4.2"
hound.workspace = true
# Library backup archive — read for `import-backup`, written by the shared
# writer the round-trip test exercises. Same version + feature set the CLI
# already pins, so this adds no new resolution in Cargo.lock.
zip = { workspace = true }
whisper-rs = { version = "0.11", optional = true }
# Optional approximate-nearest-neighbour vector index for semantic search,
# behind the `ann-usearch` feature (NOT default) and the runtime config flag
# `semantic_search.ann.enabled` (default false). usearch is a header-only C++
# HNSW core compiled via `cc` — the same class of native build the repo already
# pays for whisper-rs / ort / bundled SQLite — and is statically linked, so it
# adds no runtime DLL. Pinned exactly: its on-disk sidecar format and API have
# moved across 2.x, and the sidecar is treated as a disposable cache rebuildable
# from SQLite so a version bump is a non-event. All usearch usage is confined to
# `catalog::ann` behind `#[cfg(feature = "ann-usearch")]`.
usearch = { version = "=2.25.3", optional = true }
regex.workspace = true
which.workspace = true
# HMAC-SHA256 signing of outbound webhook bodies (X-Phoneme-Signature). Both
# already resolve in Cargo.lock as transitive deps, so this adds no new versions.
hmac = "0.12"
sha2.workspace = true

# DPAPI (CryptProtectData/CryptUnprotectData) for at-rest API-key encryption,
# GetDiskFreeSpaceExW for the Doctor's disk-space checks, Job Objects for the
# kill-on-close process lifetime chain (tray → daemon → spawned children), and
# the foreground-window APIs (GetForegroundWindow / GetWindowTextW /
# QueryFullProcessImageNameW) behind per-app dictation overrides.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security_Cryptography",
    "Win32_Storage_FileSystem",
    "Win32_System_JobObjects",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
] }

[features]
native-whisper = ["dep:whisper-rs"]
# Optional approximate-nearest-neighbour vector index for semantic search.
# NOT in any default feature set: the default build pulls zero usearch native
# code and the brute-force cosine scan stays the literal default. Enabling this
# compiles the usearch C++ HNSW core (statically linked, no runtime DLL); the
# index is still gated at runtime by `semantic_search.ann.enabled` (default
# false). Build/test this lane with `--features ann-usearch`. All usearch usage
# lives behind `#[cfg(feature = "ann-usearch")]` in `catalog::ann`.
ann-usearch = ["dep:usearch"]

[dev-dependencies]
proptest.workspace = true
reqwest.workspace = true
wiremock.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
