[package]
name = "phoneme-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
phoneme-core = { path = "../phoneme-core" }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "macros", "rt-multi-thread", "sync"] }
tokio-util.workspace = true
bytes.workspace = true
async-trait = "0.1"
tracing.workspace = true
futures = "0.3"
chrono = { workspace = true }

# Owner-restricted security descriptor for the IPC pipe (S-C1). 0.59 is already
# in the lockfile, so this pulls no new windows-sys version.
[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Security_Authorization",
] }

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }
